empesando con el carousel

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- titulo y texto -->
   <h1>Hello, world!</h1>
-  <a class="btn btn-warning" href="./pages/faq.html" role="button">Preguntas frecuentes</a>
+  <a class="btn btn-warning" href="./pages/carousel.html" role="button">Preguntas frecuentes</a>
   <div class="container">
     <p class="text-uppercase row">Lorem, ipsum dolor sit amet <span class="fst_italic">consectetur adipisicing
         elit</span>. Dolorum esse tempora sunt modi cum, officiis dolore odit
