--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- css de bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <!-- mi css siempre abajo del de bootstrap -->
+  <!-- mi css siempre abajo del de bootstrap -->
   <link rel="stylesheet" href="./css/style.css">
   <title>Bootstrap demo</title>
 </head>
@@ -15,7 +15,7 @@
 <body>
   <!-- titulo y texto -->
   <h1>Hello, world!</h1>
-  <a class="btn btn-warning" href="./pages/carousel.html" role="button">Preguntas frecuentes</a>
+  <a class="btn btn-warning" href="./pages/carousel.html" role="button">Carousel de imagenes</a>
   <div class="container">
     <p class="text-uppercase row">Lorem, ipsum dolor sit amet <span class="fst_italic">consectetur adipisicing
         elit</span>. Dolorum esse tempora sunt modi cum, officiis dolore odit
@@ -66,7 +66,7 @@
 
 
   </div>
-<!-- link de javascript al final del todo pegado al cierre del body -->
+  <!-- link de javascript al final del todo pegado al cierre del body -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
